--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # configured in r2 -> <YOUR_BUCKET-NAME> -> Settings -> Public access 
 # Either map a domain to your bucket or enable R2.dev
-PUBLIC_BUCKET_URL="https://pub-3xamp1e.r2.dev"
+PUBLIC_BUCKET_URL="https://pub-0f9c6cb777104d418d7b5da11e5c1f85.r2.dev"
